# riscv-simulator

./: .clang-format  CMakeLists.txt  Forward.hpp  Memory.hpp  README.md  RISCV.hpp  cpu.hpp  format.sh  instruction.hpp  main.cpp  prediction.hpp  register.hpp  type.hpp
Pipeline/: Decode.hpp  Excute.hpp  Execute.hpp  Fetch.hpp  Memoryaccess.hpp  Writeback.hpp
src/parrel/: CMakeLists.txt  README.md  RISCV.hpp  instruction.hpp  main.cpp
src/parrel/Pipeline/: Fetch.hpp  Memoryaccess.hpp
src/serial/: CMakeLists.txt  instruction.hpp  main.cpp  type.hpp
src/serial/Pipeline/: Fetch.hpp  Memoryaccess.hpp
